3.0
- moved pressroom_view logic into view [jbaldivieso]
- bifurcated the pressroom_content skin directory into 2.5 and 3.0 versions to
  support KSS in 3.0 sites [jbaldivieso]
- moved as much of the initialization into GenericSetup as possible, without sacrificing
  normal quickinstaller-based installation in Plone 2.5. [jbaldivieso]

1.1
- Italian translation file [rlemmi - thanks!]
- Corrected help text on press clip publication [jonstahl]
- Moved press clip description above byline [jonstahl]
- Nicer handling of link to press clip original story. [jonstahl]
- Added uninstall method to remove PR cruft. [jbaldivieso]
- Made master Press Room view listing of contacts respect contacts' order in the contacts folder [jonstahl]
- added i18n for the plone domain (content type names) and fixed translation
  in the Press room default subfolder titles and descriptions
- added i18n in pressroom domain, added Czech translation [naro - thanks!]
- removed condition on pressroom_folder_listing that prevented bylines from being shown to anonymous users [jonstahl]
- added i18n tags to page templates [jonstahl]

1.0.3

 - Changed the id on the created press contact smart folder from "roster" to "press-contacts" due to the former being a reserver id within the context of a member folder.  Fixes issue #26 [andrewb]
 - Changing some tests that were based on the assumption that we were ordering catalog results on effective rather than the more logical storydate and releaseDate schema fields [andrewb]
 - Adding test coverage to prove that a storydate and releaseDate *should* be required on the PressRelease & PressClip content types due to the sorting that's done in the default catalog queries [andrewb]
 - Making storydate and releaseDate required fields within the schema declaration per the testing coverage in the previous line [andrewb]
 - The "More press clips/release" text only shows up when there actually *are* more of those items [andrewb]